--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -108,7 +108,7 @@
                   <div class="col m6">
                     <p style="margin-top: 5px;">
                       {{ form_widget(property_form.for_rent, {'attr': {'id': 'for_rent', 'class':'filled-in'}}) }}
-                      <label for="for_rent">Is it for rent?</label>
+                      <label for="property_for_rent">Is it for rent?</label>
                     </p>
                   </div>
                 </div>
