--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -1,4 +1,4 @@
-<div class="row" id="main-info">
+<div class="row" id="main-info" style="margin-top: 0px;">
   <div class="col m12">
     {{ form_start(property_form, {'action': path('properties_save'), 'method': 'POST', 'id':'property_form'}) }}
       <div class="card">
