--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 0px;">
   <div class="col m12">
 
     <div class="card">
@@ -21,8 +21,6 @@
 
           </div>
         </div>
-
-
         <div class="row">
           <div class="col m12">
           </div>
@@ -31,7 +29,6 @@
     </div>
   </div>
 </div>
-
 <div class="row">
   <div class="col m12">
     <div class="card">
