--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -162,6 +162,8 @@
           </div>
         </div>
       </div>
+      <input type="hidden" value="{{ mls_id }}" name="mls_id" >
+      <input type="hidden" value="{{ property_id }}" name="property_id" >
     {{ form_end(property_form) }}
   </div>
 </div>
