--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -9,14 +9,15 @@
         <div class="row">
           <div class="col m12">
             <div class="row photoswipe-gallery isotope mt-0" data-pswp-uid="1">
-
-              {% for photo in property.getTempPhotos().toArray() %}
-                <a class="col s12 m6 l3 item" href="{{ photo }}" data-size="2880x1800"
-                   data-med="{{ photo }}"
-                   data-med-size="1440x900">
-                  <img src="{{ photo }}" alt="">
-                </a>
-              {% endfor %}
+              {% if property.getTempPhotos() %}
+                {% for photo in property.getTempPhotos().toArray() %}
+                  <a class="col s12 m6 l3 item" href="{{ photo }}" data-size="2880x1800"
+                     data-med="{{ photo }}"
+                     data-med-size="1440x900">
+                    <img src="{{ photo }}" alt="">
+                  </a>
+                {% endfor %}
+              {% endif %}
             </div>
 
           </div>
