--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -1,6 +1,6 @@
 <div class="row" id="main-info" style="margin-top: 0px;">
   <div class="col m12">
-    {{ form_start(property_form, {'action': path('properties_save'), 'method': 'POST', 'id':'property_form'}) }}
+    {{ form_start(property_form, {'action': path('properties_save', {'property_id':property.id}), 'method': 'POST', 'id':'property_form'}) }}
       <div class="card">
         <div class="title">
           <h5> Basic Information </h5>
@@ -15,11 +15,11 @@
         </div>
         <div class="content" style="padding-top: 5px;padding-bottom: 5px;">
           <div class="input-field">
-            {{ form_widget(property_form.name, {'attr': {'id': 'name'}}) }}
+            {{ form_widget(property_form.name) }}
             <label for="name" class="">Property Name</label>
           </div>
           <div class="input-field">
-            {{ form_widget(property_form.description, {'attr': {'id': 'description', 'class':'materialize-textarea'}}) }}
+            {{ form_widget(property_form.description, {'attr': {'class':'materialize-textarea'}}) }}
             <label for="description">Property Description</label>
           </div>
         </div>
@@ -32,32 +32,32 @@
           <div class="row" style="margin-top: 5px;">
             <div class="col m6">
               <div class="input-field">
-                {{ form_widget(property_form.bedrooms, {'attr': {'id': 'bedrooms'}}) }}
-                <label for="bedrooms" class="">Rooms</label>
+                {{ form_widget(property_form.bedrooms) }}
+                <label for="property_bedrooms" class="">Rooms</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.bathrooms, {'attr': {'id': 'bathrooms'}}) }}
-                <label for="input_baths" class="">Baths</label>
+                {{ form_widget(property_form.bathrooms) }}
+                <label for="property_bathrooms" class="">Baths</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.parking_spaces, {'attr': {'id': 'parking_spaces'}}) }}
-                <label for="parking_spaces" class="">Parking</label>
+                {{ form_widget(property_form.parking_spaces) }}
+                <label for="property_parking_spaces" class="">Parking</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.unit_size, {'attr': {'id': 'unit_size'}}) }}
-                <label for="unit_size" class="">Unit Size</label>
+                {{ form_widget(property_form.unit_size) }}
+                <label for="property_unit_size" class="">Unit Size</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.year_built, {'attr': {'id': 'year_built'}}) }}
-                <label for="year_built" class="">Year Built</label>
+                {{ form_widget(property_form.year_built) }}
+                <label for="property_year_built" class="">Year Built</label>
               </div>
               <div class="input-field" style="margin-top: 3px;">
-                {{ form_widget(property_form.list_price, {'attr': {'id': 'list_price'}}) }}
-                <label for="list_price" class="">Price</label>
+                {{ form_widget(property_form.list_price) }}
+                <label for="property_list_price" class="">Price</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.lease_term, {'attr': {'id': 'lease_term'}}) }}
-                <label for="lease_term" class="">Lease Term</label>
+                {{ form_widget(property_form.lease_term) }}
+                <label for="property_lease_term" class="">Lease Term</label>
               </div>
             </div>
             <div class="col m6">
@@ -71,36 +71,36 @@
                 {#</select>#}
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.address, {'attr': {'id': 'address'}}) }}
-                <label for="address" class="">Address</label>
+                {{ form_widget(property_form.address) }}
+                <label for="property_address" class="">Address</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.unit, {'attr': {'id': 'unit'}}) }}
-                <label for="unit" class="">Unit</label>
+                {{ form_widget(property_form.unit) }}
+                <label for="property_unit" class="">Unit</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.city, {'attr': {'id': 'city'}}) }}
-                <label for="city" class="">City</label>
+                {{ form_widget(property_form.city) }}
+                <label for="property_city" class="">City</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.state, {'attr': {'id': 'state'}}) }}
-                <label for="state" class="">State</label>
+                {{ form_widget(property_form.state) }}
+                <label for="property_state" class="">State</label>
               </div>
               <div class="input-field">
-                {{ form_widget(property_form.country, {'attr': {'id': 'country'}}) }}
-                <label for="country" class="">Country</label>
+                {{ form_widget(property_form.country) }}
+                <label for="property_country" class="">Country</label>
               </div>
               <div class="input-field">
                 <div class="row" style="margin-top: 0px;">
                   <div class="col m6">
                     <div class="input-field" style="margin-top: 0px !important;">
-                      {{ form_widget(property_form.postal_code, {'attr': {'id': 'postal_code'}}) }}
-                      <label for="postal_code" class="">Postal Code</label>
+                      {{ form_widget(property_form.postal_code) }}
+                      <label for="property_postal_code" class="">Postal Code</label>
                     </div>
                   </div>
                   <div class="col m6">
                     <p style="margin-top: 5px;">
-                      {{ form_widget(property_form.for_rent, {'attr': {'id': 'for_rent', 'class':'filled-in'}}) }}
+                      {{ form_widget(property_form.for_rent, {'attr': {'class':'filled-in'}}) }}
                       <label for="property_for_rent">Is it for rent?</label>
                     </p>
                   </div>
@@ -119,14 +119,14 @@
           <div class="row" style="margin-top: 0px">
             <div class="col m6">
               <div class="input-field">
-                {{ form_widget(property_form.amenities, {'attr': {'id': 'amenities', 'class':'materialize-textarea'}}) }}
-                <label for="amenities">Amenities</label>
+                {{ form_widget(property_form.amenities, {'attr': {'class':'materialize-textarea'}}) }}
+                <label for="property_amenities">Amenities</label>
               </div>
             </div>
             <div class="col m6">
               <div class="input-field">
-                {{ form_widget(property_form.features, {'attr': {'id': 'features', 'class':'materialize-textarea'}}) }}
-                <label for="features">Features</label>
+                {{ form_widget(property_form.features, {'attr': {'class':'materialize-textarea'}}) }}
+                <label for="property_features">Features</label>
               </div>
             </div>
           </div>
@@ -140,28 +140,14 @@
         <div class="content" style="padding-top: 5px;padding-bottom: 15px;">
           <div class="row" style="margin-top: 5px">
             <div class="col m12" style="padding-bottom: 5px;">
-              <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
               <div id="map-canvas"></div>
             </div>
           </div>
-          <div class="row" style="margin-top: 5px">
-            <div class="col m6">
-              <div class="input-field">
-                <i class="mdi-maps-place prefix"></i>
-                {{ form_widget(property_form.lat, {'attr': {'id': 'lat'}}) }}
-                <label for="lat" class="">Latitude</label>
-              </div>
-            </div>
-            <div class="col m6">
-              <div class="input-field">
-                <i class="mdi-maps-place prefix"></i>
-                {{ form_widget(property_form.lng, {'attr': {'id': 'lng'}}) }}
-                <label for="lng" class="">Lontgitude</label>
-              </div>
-            </div>
-          </div>
+          <div class="row" style="margin-top: 5px"></div>
         </div>
       </div>
+      {{ form_widget(property_form.lat) }}
+      {{ form_widget(property_form.lng) }}
       <input type="hidden" value="{{ mls_id }}" name="mls_id" >
       <input type="hidden" value="{{ property_id }}" name="property_id" >
     {{ form_end(property_form) }}
@@ -170,10 +156,55 @@
 
 <script>
   $(document).ready(function(){
-    $('#btn-save').click(function(){
-//      var property_form = $('form#property_form');
-//      console.log(property_form);
-//      property_form.submit();
+
+    if ($('#map-canvas').length != 0) {
+      var lat = {{ property.lat }};
+      var lng = {{ property.lng }};
+      var map_input_id = 'property_address';
+      var map_input_lat_id = 'property_lat';
+      var map_input_lng_id = 'property_lng';
+      google.maps.event.addDomListener(window, 'load', initialize(lat, lng,
+              map_input_id, map_input_lat_id, map_input_lng_id));
+    }
+
+    var componentForm = {
+      street_number: 'short_name',
+      route: 'long_name',
+      locality: 'long_name',
+      administrative_area_level_1: 'short_name',
+      country: 'short_name',
+      postal_code: 'short_name'
+    };
+
+    var componentFormId = {
+      street_number: 'property_unit',
+      route: 'form_route',
+      locality: 'property_city',
+      administrative_area_level_1: 'property_state',
+      country: 'property_country',
+      postal_code: 'property_postal_code'
+    };
+
+    google.maps.event.addListener(map_autocomplete, 'place_changed', function () {
+      var place = map_autocomplete.getPlace();
+      if (!place.geometry) {
+        return;
+      }
+
+      for (var i = 0; i < place.address_components.length; i++) {
+        var addressType = place.address_components[i].types[0];
+        if (addressType == "sublocality_level_1") {
+          addressType = "locality";
+        }
+        if (componentForm[addressType]) {
+
+          var val = place.address_components[i][componentForm[addressType]];
+
+          if ($('#' + componentFormId[addressType]).length) {
+            $('#' + componentFormId[addressType]).val(val).change();
+          }
+        }
+      }
     });
   });
 </script>
