--- a/src/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/UserBundle/Resources/views/Profile/index.html.twig
@@ -3,6 +3,7 @@
 
 {% block stylesheets_priority %}
   {{ parent() }}
+	<link href="{{ asset('bundles/dashboard/material/css/select2.min.css') }}" rel="stylesheet" type="text/css"/>
 	<link href="{{ asset('bundles/dashboard/material/css/pikaday.css') }}" rel="stylesheet" type="text/css"/>
 {% endblock stylesheets_priority %}
 
@@ -110,6 +111,40 @@
 		nav, nav .button-collapse.sp-cancel, nav .button-collapse.sp-cancel i, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
 			height: 25px;
 			line-height: 25px;
+		}
+		.select2-container .select2-search--inline .select2-search__field {
+			border-left: none !important;
+			border-top: none !important;
+			border-right: none !important;
+			box-shadow: inset 0 0px 0px #eee !important;
+		}
+		.select2-selection{
+			border-left: 1px solid #ccc !important;
+			border-right: 1px solid #ccc !important;
+			border-top: 1px solid #ccc !important;
+			box-shadow: inset 0 1px 2px #eee;
+
+			height: 37px !important;
+			margin-top: 1px;
+			padding-left: 5px !important;
+		}
+		.select2-container--default .select2-selection--multiple,
+		.select2-container--default.select2-container--focus .select2-selection--multiple {
+			height: auto !important;
+		}
+
+		.select2-container--default .select2-search--inline .select2-search__field {
+			height: 30px !important;
+		}
+		.select2-container--default .select2-selection--multiple .select2-selection__choice {
+			margin-top: 6px !important;
+		}
+		.select2-container--default .select2-selection--multiple .select2-selection__rendered {
+			padding: 0 0px !important;
+		}
+		.select2-container {
+			max-width: 100% !important;
+			min-width: 100% !important;
 		}
 	</style>
 		<div class="row">
@@ -285,8 +320,8 @@
 								<div class="row" style="margin-top: 0rem;">
 									<div class="col m6" style="padding-bottom: 0px;">
 										<div class="input-field">
-											{{ form_widget(profile_form.gender, {'attr': {'id': 'gender','class':'validate'}}) }}
-											<label for="gender" class="">Gender</label>
+											{{ form_widget(profile_form.gender, {'attr': {'id': 'gender'}}) }}
+											<label for="profile_gender" style="transform: translateY(-170%);left: 0px;font-size: .8rem;">Gender</label>
 										</div>
 									</div>
 									<div class="col m6" style="padding-bottom: 0px;">
@@ -330,15 +365,11 @@
 							<div class="row" style="margin-top: 0rem;">
 								<div class="col m6" style="padding-bottom: 0px;">
 									<div class="input-field align-left">
-										{{ form_widget(profile_form.company, {'attr': {'id': 'company','class':'validate'}}) }}
-										<label for="input_text_licence">Company</label>
+										{{ form_widget(profile_form.birth_date, {'attr': {'id': 'birth_date'}}) }}
+										<label for="profile_birth_date">Birth date</label>
 									</div>
 								</div>
 								<div class="col m6" style="padding-bottom: 0px;">
-									<div class="input-field align-left">
-										<input id="birth_date" type="text" value="{{ "now" | date('m/d/Y') }}">
-										<label for="birth_date">Company</label>
-									</div>
 								</div>
 							</div>
 
@@ -360,15 +391,19 @@
 
 {% block javascripts %}
 	{{parent()}}
+	<script src="{{ asset('bundles/dashboard/material/js/select2.full.min.js') }}"></script>
 	<script src="{{ asset('bundles/dashboard/material/js/jquery.inputmask.bundle.min.js') }}"></script>
 	<script src="{{ asset('bundles/dashboard/material/js/moment.js') }}"></script>
 	<script src="{{ asset('bundles/dashboard/material/js/pikaday.js') }}"></script>
 	<script src="{{ asset('bundles/dashboard/material/js/pikaday.jquery.js') }}"></script>
 	<script>
 		var picker = new Pikaday({
-			field: document.getElementById('birth_date'),
+			field: document.getElementById('profile_birth_date'),
 			format: 'L'
 		});
+		picker.setDate({{ "now" | date("m/d/Y") }});
+	$('#profile_birth_date').attr('type','text');
+	$('#profile_website').attr('type','url');
 	</script>
 {% endblock javascripts%}
 
