--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-account-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-account-info.html.twig
@@ -1,1 +1,44 @@
-<div id="test2" class="col s12">Test 2</div>
+<div id="test2" class="col s12">
+  <div id="edit-profile-container" style="display:block">
+    <div class="row" style="padding-left: 20px;padding-right: 40%">
+
+      <div class="row" style="margin-top: 0rem;">
+        <div class="col m12" style="padding-bottom: 0px;">
+          <div class="input-field align-left">
+            <i class="mdi mdi-social-person prefix"></i>
+            <input type="text" id="username" readonly="readonly" value="malinda.h@gmail.com">
+            <label for="username" class="">Username</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 0rem;">
+        <div class="col m12" style="padding-bottom: 0px;">
+          <div class="input-field align-left">
+            <i class="mdi mdi-action-lock prefix"></i>
+            <input type="password" id="password" class="validate">
+            <label for="password" class="">Password</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 0rem;">
+        <div class="col m12" style="padding-bottom: 0px;">
+          <div class="input-field">
+            <i class="mdi mdi-action-lock prefix"></i>
+            <input type="password" id="rpassword" required="required" class="validate">
+            <label for="rpassword" class="">Repeate Password</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="padding-right: 25px;padding-top: 20px">
+        <div class="col s12">
+          <button id="btn-account-save" type="submit" class="waves-effect waves-light btn btn-small">SAVE</button>
+          <a id="btn-account-cancel" class="waves-effect waves-light btn btn-small red">CANCEL</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
