--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
@@ -6,7 +6,7 @@
         <a href="#!" class="brand-logo"></a>
         <ul class="right hide-on-med-and-down">
           <li>
-            <a id="edit-profile" style="color: #424242;" class="dropdown-button" href="#!">
+            <a id="edit-profile" style="color: #9E9E9E" class="dropdown-button" href="#!">
               <i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
             </a>
           </li>
