--- a/src/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/UserBundle/Resources/views/Profile/index.html.twig
@@ -146,6 +146,17 @@
 			max-width: 100% !important;
 			min-width: 100% !important;
 		}
+    .input-field .prefix~label.active{
+      transform: translateY(-170%) !important;
+      margin-left: 0px;
+    }
+    .input-field > i.prefix{
+      text-indent: 5px;
+      color: #7C7E89;
+    }
+    .input-field > i.prefix + input {
+      text-indent: 40px;
+    }
 	</style>
 		<div class="row">
 			<div class="col m3" style="padding-right: 20px;">
@@ -193,7 +204,6 @@
 
           {#Tab Account Info#}
           {% include 'UserBundle:Profile:Partials/_index-tab-account-info.html.twig' %}
-
 
 				</div>
 			</div>
